--- a/packages/ckeditor5-remove-format/package.json
+++ b/packages/ckeditor5-remove-format/package.json
@@ -33,6 +33,7 @@
     "@ckeditor/ckeditor5-theme-lark": "42.0.2",
     "@ckeditor/ckeditor5-typing": "42.0.2",
     "@ckeditor/ckeditor5-undo": "42.0.2",
+    "@ckeditor/ckeditor5-select-all": "42.0.2",
     "typescript": "5.0.4",
     "webpack": "^5.58.1",
     "webpack-cli": "^4.9.0"
