--- a/packages/ckeditor5-link/package.json
+++ b/packages/ckeditor5-link/package.json
@@ -38,6 +38,8 @@
     "@ckeditor/ckeditor5-table": "42.0.2",
     "@ckeditor/ckeditor5-theme-lark": "42.0.2",
     "@ckeditor/ckeditor5-undo": "42.0.2",
+    "@ckeditor/ckeditor5-remove-format": "42.0.2",
+    "@ckeditor/ckeditor5-font": "42.0.2",
     "typescript": "5.0.4",
     "webpack": "^5.58.1",
     "webpack-cli": "^4.9.0"
